@@ -416,9 +416,6 @@ TEAM_CENTER_IS_BOSS 1               # if set to 1, the center player is the team
 # LIST_SCRIPTS         Lists active scripts.
 # SCRIPT_ENV           Set custom environment variables for scripts. Usage: SCRIPT_ENV <variable name> <value>
 
-# Should safety checks be done on script commands? Very much recommended to leave this on.
-CHECK_SCRIPT 1
-
 # The commands above are only available on Unix.
 
 LADDERLOG_GAME_TIME_INTERVAL -1     # write a line to ladderlog.txt indicating how "old" the current game is at most every n seconds. Negative values disable this feature.
