@@ -358,7 +358,6 @@ spawn_script_help                   Spawns an external script from a scripts/ su
 respawn_script_help                 Spawns an external script from a scripts/ subdirectory on the data path if no already running instance is found.
 force_respawn_script_help           Spawns an external script from a scripts/ subdirectory on the data path after killing the other possibly running instance.
 kill_script_help                    Kills a script. Argument must match the SPAWN_SCRIPT argument.
-check_script_help                   Should safety checks be done on script commands? Very much recommended to leave this on.
 list_scripts_help                   Lists active scripts.
 script_env_help                     Set custom environment variables for scripts. Usage: SCRIPT_ENV <variable name> <value>
 
