@@ -245,7 +245,6 @@ private:
     tCONTROLLED_PTR(eTeam)			nextTeam;		// the team we're in ( logically )
     tCONTROLLED_PTR(eTeam)			currentTeam;	// the team we currently are spawned for
     eTeamSet                        invitations_;   // teams this player is invited to
-    tCONTROLLED_PTR(eVoter)			voter_;			// voter assigned to this player
 
     tCHECKED_PTR(eNetGameObject) object; // the object this player is
     // controlling
@@ -406,8 +405,6 @@ public:
     int  RoundsSuspended ( void ) const { return suspended_; }
     bool IsGreeted() const { return greeted; }
 
-    eVoter * GetVoter() const {return voter_;}     // returns our voter
-    void CreateVoter();						// create our voter or find it
     static void SilenceMenu();				// menu where you can silence players
     static void PoliceMenu();				// menu where you can silence and kick players
 
@@ -504,6 +501,7 @@ private:
 
     REAL            wait_;                  //!< time in seconds WaitToLeaveChat() will wait for this player
 
+    void CreateVoter();						// create our voter or find it
     void			MyInitAfterCreation();
 
 protected:
